--- a/main/home.html
+++ b/main/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
     <title>
 Arpit Aggarwal    </title>
     
@@ -13,7 +15,11 @@ Arpit Aggarwal    </title>
   <body>
 	<script src="func.js"></script>
 
-hi
+  <ul class="nav">
+    <li><a href="#">Resume</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Contact Me</a></li>
+  </ul>
 
   </body>
 </html>
