--- a/main/home.html
+++ b/main/home.html
@@ -8,18 +8,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
     <title>
-Arpit Aggarwal    </title>
+Arpit Aggarwal</title>
     
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 	<script src="func.js"></script>
-
+<div class="bar"><h2>
+    <a href="./home.html" class="homing">Arpit Aggarwal</a></h2>  
   <ul class="nav">
-    <li><a href="#">Resume</a></li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">Contact Me</a></li>
+    <li><a href="">Resume</a></li>
+    <li><a href="">Projects</a></li>
+    <li><a href="">Contact Me</a></li>
   </ul>
-
+</div>
   </body>
 </html>
