--- a/main/resume.html
+++ b/main/resume.html
@@ -22,5 +22,12 @@ Arpit Aggarwal</title>
     <li><a href="./contact.html">Contact Me</a></li>
   </ul>
 </div>
+<br>
+<br>
+<br>
+<div class="resume"><a href="https://drive.google.com/file/d/1jnB4bsiscMeC0XoIkIp_HXGHCpc6BsI8/view" target="_blank">Resume</a></div>
+<br>
+<br>
+<img class="resimg" src="./ArpitAggarwal_Resume_page-0001.jpg" height="1000px">
   </body>
 </html>
