contact me page

--- a/main/contact.html
+++ b/main/contact.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>
 Arpit Aggarwal</title>
     
@@ -22,5 +25,35 @@ Arpit Aggarwal</title>
     <li><a href="./contact.html">Contact Me</a></li>
   </ul>
 </div>
+<br>
+<br>
+<div class="connect">lets connect :D</div>
+
+<ul class="socials">
+    <li>
+      <a href="https://www.linkedin.com/in/arpit-aggarwal-5b6040257/" target="_blank">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+        <span> - Linked In</span>
+      </a>
+    </li>
+    <li>
+      <a href="tel:+91 9317799108" target="_blank">
+        <i class="fa fa-phone" aria-hidden="true"></i>
+        <span> - Phone</span>
+      </a>
+    </li>
+    <li>
+      <a href="mailto:arpitaggarwal0511@gmail.com" target="_blank">
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+        <span> - Mail</span>
+      </a>
+    </li>
+    <li>
+      <a href="https://github.com/arpitaggarwal0511/arpitaggarwal0511" target="_blank">
+        <i class="fa fa-github" aria-hidden="true"></i>
+        <span> - Github</span>
+      </a>
+    </li>
+</ul>
   </body>
 </html>
