--- a/main/resume.html
+++ b/main/resume.html
@@ -28,6 +28,6 @@ Arpit Aggarwal</title>
 <div class="resume"><a href="https://drive.google.com/file/d/1jnB4bsiscMeC0XoIkIp_HXGHCpc6BsI8/view" target="_blank">Resume</a></div>
 <br>
 <br>
-<img class="resimg" src="./ArpitAggarwal_Resume_page-0001.jpg" height="1000px">
+<img class="resimg" src="./ArpitAggarwal_Resume_page-0001.jpg">
   </body>
 </html>
