--- a/main/projects.html
+++ b/main/projects.html
@@ -22,5 +22,20 @@ Arpit Aggarwal</title>
     <li><a href="./contact.html">Contact Me</a></li>
   </ul>
 </div>
+<br>
+<br>
+<br>
+<div class="projs">
+    Comming soon !<br>
+    <br>
+    Stay Tuned :D
+</div>
+
+
+
+<div id="loader">
+    <div id="box"></div>
+    <div id="hill"></div>
+  </div>
   </body>
 </html>
