--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,11 @@ Arpit Aggarwal</title>
 <br>
 <br>
 <br>
-<div class="resume"><a href="https://drive.google.com/file/d/1jnB4bsiscMeC0XoIkIp_HXGHCpc6BsI8/view" target="_blank">Resume</a></div>
+<div class="resume-container">
+  <div class="resume">
+      <a href="https://drive.google.com/file/d/1jnB4bsiscMeC0XoIkIp_HXGHCpc6BsI8/view" target="_blank">Resume</a>
+  </div>
+</div>
 <br>
 <br>
 <img class="resimg" src="./ArpitAggarwal_Resume_page-0001.jpg">
